analysis SW until populating matrix

--- a/thesis.tex
+++ b/thesis.tex
@@ -33,10 +33,12 @@
 %\usepackage[times]{quotchap}           % indien je fancy hoofdstuktitels wil
 %\usepackage[none]{hyphenat}
 %\usepackage{latexsym}
-%\usepackage{amsmath}
+\usepackage{amsmath}
 %\usepackage{amssymb}
 \usepackage{wrapfig}					% figuren met text die er rond wrapt
 \usepackage{minibox}					% voor randen rond multilijn text
+\usepackage{multirow}
+%\usepackage[table,xcdraw]{xcolor}
 
 % MFA: zet zoekpad voor figure
 \graphicspath{{fig/}}
