--- a/H4_Methods.tex
+++ b/H4_Methods.tex
@@ -76,7 +76,7 @@ The algorithms that are used most often are categorised in 2 ways:
 	\item dynamic algorithms VS heuristic algorithms: dynamic algorithms are exact but slow and computationally demanding, whereas heuristic algorithms are faster but are approximations and the best alignment is not guaranteed.
 \end{itemize}
 
-Hereunder is a schematic view of the algorithms that will be covered in this section:
+Hereunder is a schematic view of some algorithms that are used in practice:
 
 \begin{table}[H]
 \begin{tabular}{lllll}
@@ -88,16 +88,134 @@ Hereunder is a schematic view of the algorithms that will be covered in this sec
 \end{tabular}
 \caption{Classification of genetic alignment algorithms}
 \end{table}
- 
+
+
+Keep in mind, a lot of other so claimed "algorithms" (for example BFAST, ...), are accelerated versions of the Smith-Waterman algorithm.
 
 \subsection{Needleman-Wunsch}
-Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1970, now known as the \emph{Needleman-Wunsch (N-W)} algorithm. Since this algorithm is meant for global alignment, and global alignment is seldomly used in practice, further analysis of the algorithm will not be done. However, N-W has a lot of similarities with the Smith-waterman algorithm, discussed in the next section.
+Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1970, now known as the \emph{Needleman-Wunsch} (N-W) algorithm. Since this algorithm is meant for global alignment. Since global alignment is seldomly used in practice, further analysis of the algorithm will not be done. However, N-W has a lot of similarities with the Smith-Waterman algorithm, discussed in the next section.
 
 \subsection{Smith-Waterman}
+%explanation for SW
+The \emph{Smith-Waterman} (S-W) algorithms was first proposed by Temple F. Smith and Michael S. Waterman in 1981. It is a variation on (N-W), adapted for local alignment. It is a dynamic programming technique, so the optimal local alignment is guaranteed. \\
 
-\subsection{FASTA}
+The core of the algorithm is a matrix fillup, with data dependencies on the previous cells. Hereunder an analysis of the algorithm:
 
-\subsection{BLAST}
+\begin{enumerate}
+	\item Symbols used in the analysis:
+
+	Let sequences $A = a_1 a_2 a_3 \dots a_n$ and $B = b_1 b_2 b_3 \dots b_m$ be the sequences that need to be locally aligned. Here $n$ and $m$ are the lengths of sequence $A$ and $B$
+	
+	\item Define the parameters: 
+	
+	\begin{itemize}
+		\item Define $s(a,b)$ be the \emph{similarity matrix} (sometimes also called the \emph{substitution matrix}) for the two sequences. It is used for "rewarding" when $a_i = b_j$ and "punishing" when $a_i \neq b_j$.
+		
+		In the most general way, we define the similarity score as a matrix of values, e.g.:
+		
+		\begin{table}[H]
+			\centering
+			\begin{tabular}{|r|r|r|r|r|}
+				\hline
+				& \textbf{A} & \textbf{C} & \textbf{G} & \textbf{T} \\ \hline
+				\textbf{A} & 3          & -3         & -3         & -3         \\ \hline
+				\textbf{C} & -3         & 3          & -3         & -3         \\ \hline
+				\textbf{G} & -3         & -3         & 3          & -3         \\ \hline
+				\textbf{T} & -3         & -3         & -3         & 3          \\ \hline
+			\end{tabular}
+			
+			\caption{\centering Similarity matrix example}
+		\end{table}
+	
+		Often, there are only 2 scores used (equal or not equal). In this case the similarity matrix can be condensed as follows:
+		
+		\begin{align*}
+			s(a_i,b_j)=
+			\begin{cases}
+				+3, \quad a_i=b_j 	\\
+				-3, \quad a_i\neq b_j
+			\end{cases}
+		\end{align*}
+		
+		\item Define $d$ as the \emph{gap penalty} which regulates the score for an insertion or a deletion. This parameter can be:
+		
+		\begin{itemize}
+			\item \emph{Linear}: The penalty is a contant. So in this case it doesn't matter e.g. the previous was also a gap.
+			\item \emph{Affine}: An affine gap penalty considers gap opening and extension separately. For the sake of simplicity this analysis will not cover it. The algorithm can be extended to include this affine gap penalty, but this would make the algorithm more complex and we would limit our ability to develop possible accelerations.
+		\end{itemize}
+		
+		
+	\end{itemize}
+	
+	
+	\item The initialization: We construct a scoring matrix $H$ with dimensions $(n+1)\times(m+1)$. The first column and first row we initialize with $0$.
+	
+	For example: if we want to align the sequences A = $TGTTACGG$ and B = $GGTTGACTA$:
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{rrrrrrrrrr}
+			&                        & T                      & G                      & T                      & T                      & A                      & C                      & G                      & G                      \\ \cline{2-10} 
+			\multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{G} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{G} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{T} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{T} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{G} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{A} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{C} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{T} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+			\multicolumn{1}{r|}{A} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{}  \\ \cline{2-10} 
+		\end{tabular}
+		\caption{\centering Example of the initialization of the scoring matrix}
+	\end{table}
+
+	\item Matrix fill in:
+	We fill in the matrix using the following formula:
+	
+	\begin{align*}
+	H_{ij}= max
+	\begin{cases}
+	H_{i-1,j-1} + s(a_i, b_j),\\
+	H_{i-1,j} - d,\\
+	H_{i,j-1} - d,\\
+	0
+	\end{cases}
+	\end{align*}
+	
+	Where $s(a,b)$ and $d$ are the parameters of the algorithm. If we use the following values as an example:
+	
+	\begin{align*}
+	s(a_i,b_j)=
+	\begin{cases}
+	+3, \quad a_i=b_j 	\\
+	-3, \quad a_i\neq b_j
+	\end{cases} \qquad \text{and} \qquad d = 2
+	\end{align*}
+	
+	We can now fill up the scoring matrix $H$:
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{rrrrrrrrrr}
+			&                        & T                      & G                      & T                      & T                      & A                       & C                       & G                       & G                      \\ \cline{2-10} 
+			\multicolumn{1}{r|}{}  & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{0} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{G} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{3}  & \multicolumn{1}{r|}{3} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{G} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{3}  & \multicolumn{1}{r|}{6} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{T} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{6} & \multicolumn{1}{r|}{4} & \multicolumn{1}{r|}{2}  & \multicolumn{1}{r|}{0}  & \multicolumn{1}{r|}{1}  & \multicolumn{1}{r|}{4} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{T} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{4} & \multicolumn{1}{r|}{9} & \multicolumn{1}{r|}{7}  & \multicolumn{1}{r|}{5}  & \multicolumn{1}{r|}{3}  & \multicolumn{1}{r|}{2} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{G} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{6} & \multicolumn{1}{r|}{4} & \multicolumn{1}{r|}{7} & \multicolumn{1}{r|}{6}  & \multicolumn{1}{r|}{4}  & \multicolumn{1}{r|}{8}  & \multicolumn{1}{r|}{6} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{A} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{4} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{5} & \multicolumn{1}{r|}{10} & \multicolumn{1}{r|}{8}  & \multicolumn{1}{r|}{6}  & \multicolumn{1}{r|}{5} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{C} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{2} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{8}  & \multicolumn{1}{r|}{13} & \multicolumn{1}{r|}{11} & \multicolumn{1}{r|}{9} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{T} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{5} & \multicolumn{1}{r|}{4} & \multicolumn{1}{r|}{6}  & \multicolumn{1}{r|}{11} & \multicolumn{1}{r|}{10} & \multicolumn{1}{r|}{8} \\ \cline{2-10} 
+			\multicolumn{1}{r|}{A} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{1} & \multicolumn{1}{r|}{0} & \multicolumn{1}{r|}{3} & \multicolumn{1}{r|}{2} & \multicolumn{1}{r|}{7}  & \multicolumn{1}{r|}{9}  & \multicolumn{1}{r|}{8}  & \multicolumn{1}{r|}{7} \\ \cline{2-10} 
+		\end{tabular}
+		\caption{\centering Example of a populated scoring matrix}
+	\end{table}
+	
+\end{enumerate}
+
+
 
 \section{Problem definition and algorithm selection}
 
