--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -6,8 +6,8 @@
 
 \chapter{Reference mapping accelerated}
 
-\section{problems with the direct approach}
+\section{Problems with the direct approach}
 
 computational complexity: O(mn)
 
-\section{acceleration techniques}
+\section{Acceleration techniques}
