--- a/thesis.tex
+++ b/thesis.tex
@@ -23,7 +23,7 @@
 \usepackage{lipsum}
 \usepackage{sectsty}					% aanpassen van de fonts van sections en chapters
 %\usepackage[nottoc,numbib]{tocbibind}	% Bibliography mee in de ToC
-\usepackage{fancyvrb,newverbs,xcolor}
+\usepackage{fancyvrb,newverbs,xcolor,colortbl}
 
 \allsectionsfont{\sffamily}
 \chapterfont{\raggedleft\sffamily}
@@ -38,7 +38,6 @@
 \usepackage{wrapfig}					% figuren met text die er rond wrapt
 \usepackage{minibox}					% voor randen rond multilijn text
 \usepackage{multirow}
-%\usepackage[table,xcdraw]{xcolor}
 
 % MFA: zet zoekpad voor figure
 \graphicspath{{fig/}}
