--- a/H4_ELbackground.tex
+++ b/H4_ELbackground.tex
@@ -10,9 +10,11 @@ Most sequence alignment algorithms are heavily parallelisable. An overview of th
 
 \section{Overview of possible hardware}
 
-\section{CPU}
-\section{GPU}
-\section{FPGA}
-\section{ASIC}
+\subsection{CPU}
+\subsection{GPU}
+\subsection{FPGA}
+\subsection{ASIC}
+
+\section{Hardware selection}
 
 
