--- a/H4_ELbackground.tex
+++ b/H4_ELbackground.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \chapter{Platforms for sequence alignment algorithms}
+\label{ch:Platforms}
 
 Most sequence alignment algorithms are heavily parallelisable. An overview of the most frequently used algorithms is given in chapter \ref{ch:algoverzicht}.
 
