--- a/H3_Methods.tex
+++ b/H3_Methods.tex
@@ -96,7 +96,7 @@ Keep in mind, a lot of other claimed "algorithms" (for example BFAST, ...), are 
 Needleman and Wunch proposed a new algorithm for genetic sequence alignment in 1970, now known as the \emph{Needleman-Wunsch} (N-W) algorithm. Since this algorithm is meant for global alignment. Since global alignment is seldomly used in practice, further analysis of the algorithm will not be done. However, N-W has a lot of similarities with the Smith-Waterman algorithm, discussed in the next section.
 
 \subsection{Smith-Waterman}
-%explanation for SW
+\label{expl:SWanalyse}
 The \emph{Smith-Waterman} (S-W) algorithm was first proposed by Temple F. Smith and Michael S. Waterman in 1981. It is a variation on (N-W), adapted for local alignment. It is a dynamic programming technique, so the optimal local alignment is guaranteed. \\
 
 The core of the algorithm is a matrix fillup, with data dependencies on the previous cells. Hereunder an analysis of the algorithm:
@@ -261,12 +261,37 @@ GTTGAC
 
 \subsection{Mapping to a reference genome}
 
+From the sequencing machines, we get a big amount of reads. We should note that all these reads are worthless without a proper interpretation.
+
+In most cases, the first step in the analysis of the reads is knowing from which part of the genome it is from. Typically, the read is compared with the whole genome in a local alignment, for example with the Smith-Waterman algorithm. As an output, we would get the position in the human genome and an alignment with its score (how well the sequence fits in that spot). This practice is commonly referred to as \emph{Mapping to reference genome}.
+
+Since the reads are 100 to 1000 bases long, and the whole human genome is approximately 3 billion bases, this comparison is computationally a very intensive task. If we analyze the S-W algorithm (as we have done in \ref{expl:SWanalyse}, we can see that the value of each cell in the matrix is only dependent on the left-upmost 3 cells. Therefore, It leads us to believe that this algorithm can be accelerated on other hardware solutions such as an FPGA (which will be discussed in chapter \ref{ch:Platforms}) since S-W is heavily parallelizable.
+
+In most clinical applications where mapping to a reference genome is used, the number of reads to be compared with the genome is in the billions.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.95\textwidth]{problemDefinition/MappingRefGen.png}
+	\caption{Mapping to a reference genome. The direction of the read is represented by arrows}
+	\label{fig:mapRefGen}
+\end{figure}
+
+Since the read can be from the complementary DNA molecule in the double helix, the sequences can be in forward $[5' \rightarrow 3']$ direction, or in complementary $[3' \rightarrow 5']$ direction. To transform that read to the used reference genome direction we need to perform the following changes to the read:
+\begin{enumerate}
+	\item The bases should be changed to their corresponding base in the base pair;
+	\item The sequence should be reversed.
+\end{enumerate}
+We have no way of knowing in which direction the read is taken, both should be compared with the reference and the best-aligned version should be outputted.
+
+Please note, in most normal cases we can assume the distribution of reads is practically uniform. Therefore, each base in the human genome will be covered by a statistically expected amount of reads. This amount is often referred to as the \emph{reading depth}.
+
+
+\subsection{The sam and bam file format}
+
+As a convention, the output of mapping algorithms is in a \emph{SAM} (Sequence Alignment Map) or \emph{BAM} (Binary Alignment Map) file format. 
+
 %TODO
-it should be determined where it is located on the human genome. 
-
-In most Bioinformatical analysises an mapping to a reference genome should be performed.
-
-\paragraph{The sam and bam file format}
+EXPLAIN...
 
 \subsection{Clinical application}
 
