--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -10,4 +10,7 @@
 
 computational complexity: O(mn)
 
-\section{Acceleration techniques}
+\section{Acceleration Idea: accelerating using the BFAST algorithm}
+
+\subsection{BFAST algorithm}
+%TODO
