titeltjes implementatiehoofdstukken opgesteld

--- a/H4_ELbackground.tex
+++ b/H4_ELbackground.tex
@@ -18,4 +18,12 @@ As we saw in the analysis of the Smith-Waterman algorithm in \ref{expl:SWanalyse
 
 \section{Hardware selection}
 
+\subsection{Recent advances in High Level Synthesis}
+
+\section{Platform communication}
+
+\subsection{USB}
+\subsection{Ethernet}
+\subsection{Alternatives and selection}
+
 
