--- a/H5_RMaccelerated.tex
+++ b/H5_RMaccelerated.tex
@@ -4,13 +4,15 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{Reference mapping accelerated}
+\chapter{Initial approach with pure Smith-Waterman}
 
-\section{Problems with the direct approach}
+\section{The concept}
+
+\section{System implementation}
+
+\section{Possible initial speedups}
+
+\section{Problems with this initial approach}
 
 computational complexity: O(mn)
 
-\section{Acceleration Idea: accelerating using the BFAST algorithm}
-
-\subsection{BFAST algorithm}
-%TODO
