--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -4,6 +4,10 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{System implementation for reference genome mapping}
+\chapter{Acceleration idea: BFAST algorithm}
 
-...
+\section{BFAST algorithm}
+
+\section{System implementation}
+
+\section{Speedups}
