--- a/H7_results.tex
+++ b/H7_results.tex
@@ -4,6 +4,6 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-\chapter{implementation results and speedup}
+\chapter{Implementation results}
 
 ...
