titeltjes aangepast: ook hoofdstuk voor initieel werk

--- a/H3_Methods.tex
+++ b/H3_Methods.tex
@@ -291,6 +291,7 @@ Please note, in most normal cases we can assume the distribution of reads is pra
 As a convention, the output of mapping algorithms is in a \emph{SAM} (Sequence Alignment Map) or \emph{BAM} (Binary Alignment Map) file format. The BAM file format is just a compressed version of the SAM format, but the SAM format is more readable, which makes it easier for troubleshooting. There exists a lot of tools transform a SAM to BAM file already, so in this thesis we will focus on the SAM format.
 
 %TODO
+//TODO
 
 \subsection{Clinical application}
 
