--- a/H4_ELbackground.tex
+++ b/H4_ELbackground.tex
@@ -26,4 +26,5 @@ As we saw in the analysis of the Smith-Waterman algorithm in \ref{expl:SWanalyse
 \subsection{Ethernet}
 \subsection{Alternatives and selection}
 
+bv. SATA, PCI, ...
 
