--- a/thesis.tex
+++ b/thesis.tex
@@ -145,6 +145,7 @@
 \input{H2_MBbackground}
 \input{H3_Methods}
 \input{H4_ELbackground}
+\input{H4_InitialDifficulties}
 \input{H5_RMaccelerated}
 \input{H6_implementation}
 \input{H7_results}
